# ruftech_pass

./: CHANGELOG.md  README.md  docker-compose.yaml  ruftech.code-workspace
.github/workflows/: backend.yml  backend_CI.yml  ci.yml  frontend.yml  (+2 more)
backend/: .gitignore  .pre-commit-config.yaml  DockerFile  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  sonar-project.properties
backend/alembic/: env.py
backend/alembic/versions/: 146f22fbd002_make_pydantic_fix.py  453bf6255cd8_create_tables.py  57c23d32a6e1_create_tables.py  8685ce2ddb5c_adding_cascade_deleition.py  c773c9d64a41_add_service_url_to_password.py  f61244ac4829_make_email_nullable.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/passwords/: router.py  schemas.py
backend/app/api/v1/users/: router.py  schemas.py  utils.py
backend/app/core/: config.py
backend/app/db/: depedency.py  models.py  session.py
backend/app/models/: user.py
backend/app/routers/: user.py
backend/app/schemas/: user.py
backend/tests/: conftest.py  test_observability.py  test_passwords.py  test_users.py  test_utils.py
docs/: README.md  ci-cd-guide.md  code-standards.md  codebase-summary.md  development-roadmap.md  project-changelog.md  project-overview-pdr.md  system-architecture.md  testing-guide.md  tests-overview.md
frontend/: .gitignore  .npmrc  Dockerfile  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  plopfile.cjs  pnpm-lock.yaml  sonar-project.properties  tsconfig.app.json  turbo.json  vite.config.ts
(+146 files in other folders)
