[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.128.6",
    "isort>=8.0.1",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.11.0",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.8",
]
